# GLM-DocAlign

./: .gitignore  CHANGELOG.md  CONTEXT.md  Dockerfile.sglang  Dockerfile.vllm  LICENSE  README (2).md  README (5).md  README.md  appocr_final.py  appocr_vllm_ui.py  my_template.docx  my_template_academic.docx  ocrtest.py  ocrtest_pipeline.py  postprocessing.py  pyproject.toml  run_pipeline.py  start_glmocr.bat
.github/workflows/: pytest-ci.yml
docs/superpowers/plans/: 2026-06-14-glmocr-pipeline.md  2026-06-17-glm-pipeline-refactor-plan.md  2026-06-17-postprocessing-clean-reflow-plan.md  2026-06-20-async-pipeline.md
docs/superpowers/specs/: 2026-06-14-glmocr-pipeline-design.md  2026-06-17-glm-pipeline-refactor-design.md  2026-06-20-async-pipeline-design.md
glmocr/: __init__.py  config.py  postprocessing.py  preprocessing.py
glmocr/pipeline/: async_ocr.py  deskew.py  masked_crop.py  orchestrator.py  xycut.py
glmocr/templates/: pagebreak.lua
mineru_integration/: mineru_glm.py  test_mineru_glm.py
mineru_integration/mineru_vl_utils/: __init__.py
pipeline/: async_ocr.py  deskew.py  masked_crop.py  orchestrator.py  xycut.py
scripts/: download_mineru_pipeline.bat  run_benchmark.py  start_glmocr.bat  stop_glmocr.bat
scripts/ui/: appocr_vllm_ui.py
tests/: __init__.py  test_async_ocr.py  test_deskew.py  test_masked_crop.py  test_orchestrator.py  test_postprocessing.py  test_xycut.py
