[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glm-docalign"
version = "0.1.0"
description = "High-performance document parsing pipeline for GLM-OCR, featuring 3-stage async streaming throughput, dual-mask anti-ghosting crop, and offline Middle-JSON caching."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymupdf",
    "tqdm",
    "pillow",
    "markdownify",
    "transformers",
    "torch",
    "aiohttp",
    "requests",
    "gradio",
    "numpy",
    "opencv-python-headless",
]

[project.urls]
Homepage = "https://github.com/your-username/glm-ocr"
Repository = "https://github.com/your-username/glm-ocr"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "torchvision",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scratch", ".agents", "model", "ocr_output", ".gemini", ".claude"]

[tool.setuptools.packages.find]
include = ["glmocr", "pipeline"]

[tool.setuptools.package-data]
glmocr = ["templates/*"]
